--- a/serverless.yml
+++ b/serverless.yml
@@ -2,12 +2,13 @@ frameworkVersion: ^3.39.0
 service: hello
 provider:
   name: aws
-  runtime: go1.x
+  runtime: provided.al2023
+  architecture: arm64
 package:
   individually: true
 functions:
   hello:
-    handler: hello
+    handler: bin/bootstrap
     package:
       artifact: bin/hello.zip
     events:
